[tool.poetry]
name = "ots student documentation"
version = "0.1.0"
description = "Documentation for OTS student employees using MkDocs"
authors = ["Luis G."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material-extensions = "^1.1.1"
mkdocs-material = "^9.0.1"
mdx-truly-sane-lists = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
